--- a/src/components/personalAccount/helpInfo/HelpInfo.scss
+++ b/src/components/personalAccount/helpInfo/HelpInfo.scss
@@ -6,6 +6,9 @@
     font-size: var(--title-font-size);
     font-weight: 700;
   }
+  &__subtitle {
+    opacity: 0.5;
+  }
   &__accordion {
     border: 1px solid rgba(89, 133, 203, 0.25);
     border-radius: 8px;
