update personal account components
Теперь блок дополнительной информации можно удалять, изменился их дизайн

--- a/src/components/personalAccount/profileUser/ProfileUser.scss
+++ b/src/components/personalAccount/profileUser/ProfileUser.scss
@@ -203,6 +203,8 @@
     flex-direction: column;
     align-items: flex-end;
     gap: 16px;
+    margin-top: 16px;
+    
 
     .save {
       border: none;
