update ui components

--- a/src/components/UI/preloader/Preloader.module.scss
+++ b/src/components/UI/preloader/Preloader.module.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba($color: #ffffff, $alpha: 1); /* Полупрозрачный фон */
+  background: rgba($color: #ffffff, $alpha: 1); 
   display: flex;
   justify-content: center;
   align-items: center;
