--- a/src/components/personalAccount/mainPanel/MainPanel.scss
+++ b/src/components/personalAccount/mainPanel/MainPanel.scss
@@ -1,11 +1,19 @@
-.account {
+.main {
+  background: white;
+  height: 100%;
+  border-radius: 16px;
+
+  &__header,
   &__main {
-    background: white;
-    width: 100%;
-    height: 100%;
-    border-radius: 16px;
     padding: 16px;
   }
+
+  &__header {
+  }
+
+  &__main {
+  }
+
   &__title {
     font-weight: 700;
   }
