--- a/src/components/personalAccount/profileUser/ProfileUser.scss
+++ b/src/components/personalAccount/profileUser/ProfileUser.scss
@@ -28,58 +28,18 @@
     }
   }
 
-  &__photo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #f2f2f2;
-    max-width: 150px;
-    max-height: 150px;
-    min-width: 150px;
-    min-height: 150px;
-    border-radius: 8px;
-    transition: all 0.2s;
-
-    &:hover {
-      opacity: 0.5;
-    }
-
-    &-label {
-      display: flex;
-    }
-
-    &-img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-  }
-
   &__details {
     display: flex;
     flex-direction: column;
     gap: 16px;
   }
 
-  &__user-name {
+  &__fio {
     margin: 0;
-  }
-
-  &__user-phone {
-    font-weight: 400;
-    margin: 0;
-  }
-
-  &__darkened {
-    opacity: 0.5;
   }
 
   &__identification {
     display: flex;
-    flex-direction: row;
-    align-items: flex-end;
     gap: 16px;
 
     .iden {
@@ -204,7 +164,6 @@
     align-items: flex-end;
     gap: 16px;
     margin-top: 16px;
-    
 
     .save {
       border: none;
