--- a/src/components/UI/cards/employeeСard/EmployeeСard.module.scss
+++ b/src/components/UI/cards/employeeСard/EmployeeСard.module.scss
@@ -10,7 +10,7 @@
   transition: border 0.2s;
 
   &:hover {
-    border: 1px solid rgba($color: #3066be, $alpha: 1); // TODO: Сделать нормальный hover
+    border: 1px solid rgba($color: #3066be, $alpha: 1);
   }
 
   &__avatar {
