--- a/src/components/UI/table/Table.module.scss
+++ b/src/components/UI/table/Table.module.scss
@@ -1,12 +1,17 @@
 .table {
-  outline: 1px solid #eaf0f8;
+  outline: 1px solid rgba(48, 102, 190, 0.25);
   background: #fff;
-  border-radius: 16px;
+  border-radius: 8px;
   width: 100%;
   display: table;
   overflow: hidden;
   border-collapse: collapse;
 }
+
+.tr {
+  border-bottom: 1px solid rgba(48, 102, 190, 0.25);
+}
+
 .thead {
   width: 100%;
 }
@@ -15,7 +20,7 @@
 
 .trData {
   &:nth-child(odd) {
-    background: #eaf0f8;
+    background: rgba(48, 102, 190, 0.05);
   }
 }
 
@@ -29,7 +34,7 @@
 .td {
   width: auto;
   padding: 16px;
-  &:last-child {
-    width: 24px;
-  }
+  // &:last-child {
+  //   width: 24px;
+  // }
 }
