--- a/src/components/personalAccount/appointmentInfo/AppointmentInfo.scss
+++ b/src/components/personalAccount/appointmentInfo/AppointmentInfo.scss
@@ -3,10 +3,6 @@
   flex-direction: column;
   gap: 16px;
 
-  &__title {
-    font-weight: 700;
-  }
-
   &__subtitle {
     opacity: 0.5;
   }
@@ -19,6 +15,11 @@
 
   &__input {
     width: 100%;
+  }
+
+  &__inputs {
+    display: flex;
+    gap: 16px;
   }
 
   &__result {
@@ -74,5 +75,22 @@
 
   &__name {
     margin: 0;
+  }
+
+  @media (max-width: 720px) {
+    &__actions, &__inputs {
+      flex-direction: column;
+    }
+    &__input {
+      width: 100%;
+    }
+  }
+
+  @media (max-width: 430px) {
+    &__doctor {
+      align-items: center;
+      flex-direction: column;
+      text-align: center;
+    }
   }
 }
