--- a/src/components/personalAccount/profileUser/ProfileUser.scss
+++ b/src/components/personalAccount/profileUser/ProfileUser.scss
@@ -25,6 +25,7 @@
     @media (max-width: 430px) {
       align-items: center;
       flex-direction: column;
+      text-align: center;
     }
   }
 
