update personal account components

--- a/src/components/personalAccount/reviewsInfo/ReviewsInfo.scss
+++ b/src/components/personalAccount/reviewsInfo/ReviewsInfo.scss
@@ -6,8 +6,8 @@
   }
 
   &__list {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     gap: 16px;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   }
 }
