--- a/src/components/personalAccount/reviewsInfo/reviewsItem/ReviewsItem.scss
+++ b/src/components/personalAccount/reviewsInfo/reviewsItem/ReviewsItem.scss
@@ -31,9 +31,10 @@
 
   &__user {
     display: flex;
+    flex-direction: column;
     gap: 8px;
   }
-  
+
   &__name {
     font-size: 16px;
     font-weight: 700;
@@ -42,24 +43,22 @@
     opacity: 0.5;
   }
   &__main {
-    &-text {
-      textarea {
-        border: none;
-        box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
-        padding: 8px;
-        border-radius: 8px;
-        resize: none;
-        width: 100%;
-        height: 100px;
-      }
-      p {
-        margin: 0;
-      }
-      span {
-        margin-left: 16px;
-        opacity: 0.5;
-        cursor: pointer;
-      }
+    textarea {
+      border: none;
+      box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+      padding: 8px;
+      border-radius: 8px;
+      resize: none;
+      width: 100%;
+      height: 100px;
+    }
+    p {
+      margin: 0;
+    }
+    span {
+      margin-left: 16px;
+      opacity: 0.5;
+      cursor: pointer;
     }
   }
   &__actions {
