--- a/src/components/clinicDetailedItem/ClinicDetailedItem.scss
+++ b/src/components/clinicDetailedItem/ClinicDetailedItem.scss
@@ -1,271 +1,276 @@
 .clinic-detailed-item {
+  &__box-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 60px;
+  }
 
-	&__box-title {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		margin-bottom: 60px;
-	}
+  &__wrapper-first {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+  }
 
-	&__wrapper-first {
-		display: flex;
-		justify-content: space-between;
-		margin-bottom: 30px;
-	}
+  &__wrapper-first-left {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    gap: 30px;
+  }
 
-	&__wrapper-first-left {
-		display: flex;
-		flex-direction: column;
-		width: 40%;
-		gap: 30px;
-	}
+  &__wrapper-first-center {
+    width: 25%;
+  }
 
-	&__wrapper-first-center {
-		width: 25%;
-	}
+  &__wrapper-first-right {
+    width: 25%;
+  }
 
-	&__wrapper-first-right {
-		width: 25%;
-	}
+  &__wrapper-first-item {
+    display: flex;
+    gap: 30px;
+    height: 100%;
+  }
 
-	&__wrapper-first-item {
-		display: flex;
-		gap: 30px;
-		height: 100%;
-	}
+  &__description-first {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.25);
+    background: #ffffff;
+    border-radius: 20px;
+  }
 
-	&__description-first {
-		width: 100%;
-		height: 100%;
-		padding: 20px;
-		background: #ffffff;
-		border-radius: 20px;
-	}
+  &__license-img {
+    max-width: 69px;
+    max-height: 99px;
+    cursor: pointer;
+  }
 
-	&__license-img {
-		max-width: 69px;
-		max-height: 99px;
-		cursor: pointer;
-	}
+  &__license-img:not(:nth-child(5)) {
+    margin-right: 16px;
+  }
 
-	&__license-img:not(:nth-child(5)) {
-		margin-right: 16px;
-	}
+  &__flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
 
-	&__flex {
-		display: flex;
-		justify-content: space-between;
-		align-items: flex-end;
-	}
+  &__review-button {
+    margin-top: 28px;
+    border-radius: 40px;
+    width: 228px;
+    height: 42px;
+    border: none;
+    background: #3066be;
+    font-family: Raleway;
+    font-weight: 400;
+    font-size: 20px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fff;
+    cursor: pointer;
+  }
 
-	&__review-button {
-		margin-top: 28px;
-		border-radius: 40px;
-		width: 228px;
-		height: 42px;
-		border: none;
-		background: #3066be;
-		font-family: Raleway;
-		font-weight: 400;
-		font-size: 20px;
-		text-transform: uppercase;
-		text-align: center;
-		color: #fff;
-		cursor: pointer;
-	}
+  &__modal-send-review-block {
+    margin-bottom: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-	&__modal-send-review-block {
-		margin-bottom: 32px;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-	}
+  &__modal-send-review {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 470px;
+  }
 
-	&__modal-send-review {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		min-width: 470px;
-	}
+  &__modal-send-review-title {
+    margin: 0;
+    padding-bottom: 32px;
+    margin-top: 34px;
+    margin-bottom: 64px;
+    border-bottom: 1px solid #3066be;
+    font-family: Raleway;
+    font-weight: 700;
+    font-size: 24px;
+    font-variant: small-caps;
+    text-align: center;
+    color: #000;
+  }
 
-	&__modal-send-review-title {
-		margin: 0;
-		padding-bottom: 32px;
-		margin-top: 34px;
-		margin-bottom: 64px;
-		border-bottom: 1px solid #3066be;
-		font-family: Raleway;
-		font-weight: 700;
-		font-size: 24px;
-		font-variant: small-caps;
-		text-align: center;
-		color: #000;
-	}
+  &__modal-send-review-description {
+    margin: 0;
+    margin-bottom: 25px;
+    font-family: Raleway;
+    font-weight: 400;
+    font-size: 20px;
+    font-variant: small-caps;
+    text-align: center;
+    color: #000;
+  }
 
-	&__modal-send-review-description {
-		margin: 0;
-		margin-bottom: 25px;
-		font-family: Raleway;
-		font-weight: 400;
-		font-size: 20px;
-		font-variant: small-caps;
-		text-align: center;
-		color: #000;
-	}
+  &__modal-send-review-button {
+    margin-top: 32px;
+  }
 
-	&__modal-send-review-button {
-		margin-top: 32px;
-	}
+  &__modal {
+    padding: 34px;
+    width: 1144px;
+    height: max-content;
+  }
 
-	&__modal {
-		padding: 34px;
-		width: 1144px;
-		height: max-content;
-	}
+  &__modal-title {
+    margin: 0;
+    margin-bottom: 12px;
+    color: #000;
+    font-family: Raleway;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+  }
 
-	&__modal-title {
-		margin: 0;
-		margin-bottom: 12px;
-		color: #000;
-		font-family: Raleway;
-		font-size: 40px;
-		font-style: normal;
-		font-weight: 700;
-		line-height: normal;
-		text-transform: uppercase;
-	}
+  &__modal-description {
+    margin: 0;
+    margin-bottom: 32px;
+    color: #000;
+    font-family: Raleway;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
 
-	&__modal-description {
-		margin: 0;
-		margin-bottom: 32px;
-		color: #000;
-		font-family: Raleway;
-		font-size: 16px;
-		font-style: normal;
-		font-weight: 400;
-		line-height: normal;
-	}
+  &__modal-license-img {
+    cursor: pointer;
+  }
 
-	&__modal-license-img {
-		cursor: pointer;
-	}
+  &__modal-license-img:not(:nth-child(5n)) {
+    margin-right: 32px;
+  }
 
-	&__modal-license-img:not(:nth-child(5n)) {
-		margin-right: 32px;
-	}
+  &__modal-license-img:not(:first-child):not(:nth-child(2)):not(
+      :nth-child(3)
+    ):not(:nth-child(4)):not(:nth-child(5)) {
+    margin-top: 32px;
+  }
 
-	&__modal-license-img:not(:first-child):not(:nth-child(2)):not(:nth-child(3)):not(:nth-child(4)):not(:nth-child(5)) {
-		margin-top: 32px;
-	}
+  &__description-first-box {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+  }
 
-	&__description-first-box {
-		display: flex;
-		align-items: center;
-		margin-bottom: 30px;
-	}
+  &__description-first-item {
+    margin-right: 20px;
 
-	&__description-first-item {
-		margin-right: 20px;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 
-		&:last-child {
-			margin-right: 0;
-		}
-	}
+  &__description {
+    padding: 20px;
+    background: #ffffff;
+    border-radius: 20px;
+    margin-bottom: 30px;
+  }
 
-	&__description {
-		padding: 20px;
-		background: #ffffff;
-		border-radius: 20px;
-		margin-bottom: 30px;
-	}
+  &__wrapper-second {
+    display: flex;
+    justify-content: space-between;
+  }
 
-	&__wrapper-second {
-		display: flex;
-		justify-content: space-between;
-	}
+  &__wrapper-second-left {
+    width: 25%;
+  }
 
-	&__wrapper-second-left {
-		width: 25%;
-	}
+  &__wrapper-second-right {
+    width: 70%;
+  }
 
-	&__wrapper-second-right {
-		width: 70%;
-	}
+  &__description-second {
+    padding: 20px;
+    background: #ffffff;
+    border-radius: 20px;
+    margin-bottom: 30px;
 
-	&__description-second {
-		padding: 20px;
-		background: #ffffff;
-		border-radius: 20px;
-		margin-bottom: 30px;
-
-		&_nav {
-			position: sticky;
-			top: 30px;
-		}
-	}
+    &_nav {
+      position: sticky;
+      top: 30px;
+    }
+  }
 }
 
 //* ПК
-@media (max-width: 1600px) {}
+@media (max-width: 1600px) {
+}
 
 //* ПК
-@media (max-width: 1440px) {}
+@media (max-width: 1440px) {
+}
 
 //* ПК
 @media (max-width: 1280px) {
-	.clinic-detailed-item {
+  .clinic-detailed-item {
+    &__box-title {
+      margin-bottom: 30px;
+    }
 
-		&__box-title {
-			margin-bottom: 30px;
-		}
+    &__wrapper-first {
+      flex-direction: column;
+    }
 
-		&__wrapper-first {
-			flex-direction: column;
-		}
+    &__wrapper-first-left {
+      width: 100%;
+      margin-bottom: 30px;
+    }
 
-		&__wrapper-first-left {
-			width: 100%;
-			margin-bottom: 30px;
-		}
+    &__wrapper-first-center {
+      width: 100%;
+      margin-bottom: 30px;
+    }
 
-		&__wrapper-first-center {
-			width: 100%;
-			margin-bottom: 30px;
-		}
-
-		&__wrapper-first-right {
-			width: 100%;
-		}
-	}
+    &__wrapper-first-right {
+      width: 100%;
+    }
+  }
 }
 
 //* Планшет
-@media (max-width: 1024px) {}
+@media (max-width: 1024px) {
+}
 
 //* Планшет
 @media (max-width: 768px) {
-	.clinic-detailed-item {
+  .clinic-detailed-item {
+    &__wrapper-first-item {
+      flex-direction: column;
+    }
 
-		&__wrapper-first-item {
-			flex-direction: column;
-		}
+    &__wrapper-second {
+      flex-direction: column;
+    }
 
-		&__wrapper-second {
-			flex-direction: column;
-		}
+    &__wrapper-second-left {
+      width: 100%;
+    }
 
-		&__wrapper-second-left {
-			width: 100%;
-		}
-
-		&__wrapper-second-right {
-			width: 100%;
-		}
-	}
+    &__wrapper-second-right {
+      width: 100%;
+    }
+  }
 }
 
 //* Телефон
-@media (max-width: 360px) {}
+@media (max-width: 360px) {
+}
 
 //* Телефон
-@media (max-width: 320px) {}
+@media (max-width: 320px) {
+}
