--- a/src/components/review/Review.module.scss
+++ b/src/components/review/Review.module.scss
@@ -1,20 +1,22 @@
 .review {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  display: flex;
+  gap: 4px;
+  flex-direction: column;
+  align-items: center;
 
-	&__box {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-	}
+  &__box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-	&__img {
-		margin-right: 10px;
-	}
+  &__img {
+    width: 25%;
+    margin-right: 10px;
+  }
 
-	&__a {
-		color: #6D9DC5;
-		text-decoration: none;
-	}
+  &__a {
+    color: #6d9dc5;
+    text-decoration: none;
+  }
 }
