--- a/src/app/index.css
+++ b/src/app/index.css
@@ -43,7 +43,7 @@
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(98% 0 0);
+  --background: oklch(1 0 0);
   --foreground: oklch(26.862% 0.00003 271.152);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
@@ -55,8 +55,8 @@
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.96 0 0);
   --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.962 0.044 156.743);
-  --accent-foreground: oklch(0.527 0.154 150.069);
+  --accent: oklch(0.97 0 0);
+  --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(87.2% 0.01 258.338);
   --input: oklch(0.922 0 0);
@@ -74,9 +74,9 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
-  --drop-shadow:
-    0px 3px 8px rgba(0, 0, 0, 0.35), 0px 1px 3px rgba(0, 0, 0, 0.5),
-    inset 0px 1px 0px rgba(255, 255, 255, 0.08), inset 0px 0px 1px rgba(255, 255, 255, 0.3);
+  --drop-shadow: 0px 3px 8px rgba(0, 0, 0, 0.35), 0px 1px 3px rgba(0, 0, 0, 0.5),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.08),
+    inset 0px 0px 1px rgba(255, 255, 255, 0.3);
 }
 
 /* .dark {
@@ -121,7 +121,7 @@
 
   body {
     @apply bg-background text-foreground;
-    /* @apply bg-gradient-to-br from-purple-100 via-white to-orange-100; */
+    @apply bg-gradient-to-br from-purple-100 via-white to-orange-100;
   }
 
   h1 {
